--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- header and nav bar -->
     <header class="header">
         <nav>
             <h2 class="nav-title">G3 Architects</h2>
@@ -33,6 +34,7 @@
         </section>
     </header>
     <main>
+        <!-- blog section left -->
         <div class="blog-container">
             <div class="blog-left-comntainer">
                 <div class="blogs">
@@ -55,6 +57,7 @@
                 </div>
 
             </div>
+            <!-- blog section roght -->
             <div class="blog-right-container">
                 <div class="blog-tetail">
                     <h2 class="blog-title"> <span style="color:#727272;">Quick list</span> <span style="color:#131313;">of Our</span> <span style="color: #FF900E;">Features</span></h2>
@@ -63,6 +66,7 @@
                 </div>
             </div>
         </div>
+        <!-- Features you will love & enjoy section  -->
         <section class="feature">
             <div class="feature-one-left">
                 <h2>Features you will love & enjoy</h2>
@@ -97,6 +101,7 @@
                 <button class="btn2"> <span class="btn-design">10+Year </span>Experience</button>
             </div>
         </section>
+        <!-- Some Facts section -->
         <section class="some-facts">
             <h2 class="some-title">Some Facts</h2>
             <p class="some-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -131,6 +136,7 @@
                 </div>
             </div>
         </section>
+        <!-- Sponspors section -->
         <section class="our-sponspors">
             <h3 class="sponspor-title">Our Sponspors</h3>
             <p class="sponspor-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -153,6 +159,7 @@
             </div>
         </section>
         <footer>
+            <!-- footer section -->
             <div class="footer-des">
                 <p>All rights reserved copyright@2023 startup landing page design</p>
             </div>
